# GPT5-XML-prompt-manager

./: .gitignore  README.md  app.py  models.py  pyproject.toml  store.py
src/: xml_utils.py
static/: autosave.js  style.css
templates/: _field.html  base.html  index.html  preview.html
