[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xml-manager"
version = "0.1.0"
description = "A lightweight XML manager providing fast XML prompt generation for GPT-5."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.3",
]

[project.urls]
Homepage = "https://example.com/xml-manager"
Repository = "https://github.com/yourname/xml-manager"