[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xml-manager"
version = "0.1.0"
description = "A lightweight XML manager providing fast XML prompt generation for GPT-5."
authors = [
    { name = "Oleg Solontsov", email = "solontsov.ov@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.3",
    "waitress>=3.0.2",
]

[project.urls]
Repository = "https://github.com/SoloveyLS/GPT5-XML-prompt-manager"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
